--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Moonex - Contact</title>
+	<title>AdaGlory - Who is a UI/UX Designer</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
-	<link rel="icon" type="image/png" href="assets/img/root/favicon.png">
+	<link rel="icon" type="image/png" href="assets/img/root/Favicon-logo.jpg">
 	<!--Framework-->
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-grid.min.css">
@@ -34,105 +34,35 @@
 		<!--Site Wrapper Inner-->
 		<div class="ptf-site-wrapper__inner">
 			<!--Header-->
-			<header class="ptf-header ptf-header--style-3 ptf-header--opaque">
-				<div class="ptf-navbar ptf-navbar--main ptf-navbar--sticky">
+			<header class="ptf-header ptf-header--style-7 ptf-header--opaque">
+				<div class="ptf-navbar ptf-navbar--main">
 					<div class="container-xxl">
 						<div class="ptf-navbar-inner">
-							<!--Logo--><a class="ptf-navbar-logo" href="index.html"><img class="black" src="assets/img/root/logo-dark.png" alt="" loading="lazy"><img class="white" src="assets/img/root/logo-white.png" alt="" loading="lazy"></a>
 							<!--Navigation-->
 							<nav class="ptf-nav ptf-nav--default">
 								<!--Menu-->
 								<ul class="sf-menu">
 									<li class="menu-item-has-children two-columns"><a href="index.html"><span>Home</span></a>
-										<ul class="sub-menu">
-											<li><a href="index.html"><span>Home Default</span></a>
-											</li>
-											<li><a href="home-studio.html"><span>Home Studio</span></a>
-											</li>
-											<li><a href="home-agency.html"><span>Home Agency</span></a>
-											</li>
-											<li><a href="home-minimal.html"><span>Home Minimal</span></a>
-											</li>
-											<li><a href="home-dark.html"><span>Home Dark</span></a>
-											</li>
-											<li><a href="home-parallax.html"><span>Home Parallax</span></a>
-											</li>
-											<li><a href="home-freelancer.html"><span>Home Freelancer</span></a>
-											</li>
-											<li><a href="home-vertical.html"><span>Home Vertical</span></a>
-											</li>
-											<li><a href="home-trending.html"><span>Home Trending</span></a>
-											</li>
-											<li><a href="home-modern.html"><span>Home Modern</span></a>
-											</li>
-										</ul>
 									</li>
-									<li class="menu-item-has-children"><a href="#"><span>Portfolio</span></a>
-										<ul class="sub-menu">
-											<li><a href="portfolio-grid.html"><span>Works Grid</span></a>
-											</li>
-											<li><a href="portfolio-masonry.html"><span>Works Masonry</span></a>
-											</li>
-											<li><a href="portfolio-listing.html"><span>Works Listing</span></a>
-											</li>
-											<li><a href="portfolio-carousel.html"><span>Works Carousel</span></a>
-											</li>
-											<li><a href="portfolio-showcase-1.html"><span>Work Showcase 1</span></a>
-											</li>
-											<li><a href="portfolio-showcase-2.html"><span>Work Showcase 2</span></a>
-											</li>
-										</ul>
+									<li class="menu-item-has-children"><a href="#portfolio"><span>Portfolio</span></a>
 									</li>
-									<li class="menu-item-has-children"><a href="#"><span>Blog</span></a>
-										<ul class="sub-menu">
-											<li><a href="blog-grid.html"><span>Blog Grid</span></a>
-											</li>
-											<li><a href="blog-masonry.html"><span>Blog Masonry</span></a>
-											</li>
-											<li><a href="blog-sidebar.html"><span>Blog Sidebar</span></a>
-											</li>
-											<li><a href="single-post.html"><span>Single Post</span></a>
-											</li>
-											<li><a href="single-post-sidebar.html"><span>Single Post Sidebar</span></a>
-											</li>
-										</ul>
+									<li class="menu-item-has-children"><a href="#Testimonial"><span>Testimonial</span></a>	
 									</li>
-									<li class="menu-item-has-children two-columns"><a href="#"><span>Pages</span></a>
-										<ul class="sub-menu">
-											<li><a href="about-us.html"><span>About Us</span></a>
-											</li>
-											<li><a href="about-me.html"><span>About Me</span></a>
-											</li>
-											<li><a href="services.html"><span>Services</span></a>
-											</li>
-											<li><a href="service-detail.html"><span>Service Detail</span></a>
-											</li>
-											<li><a href="pricing.html"><span>Pricing</span></a>
-											</li>
-											<li><a href="team.html"><span>Team</span></a>
-											</li>
-											<li><a href="faq.html"><span>FAQ</span></a>
-											</li>
-											<li class=" current-menu-item"><a href="contact.html"><span>Contact</span></a>
-											</li>
-											<li><a href="404.html"><span>Page 404</span></a>
-											</li>
-											<li><a href="coming-soon.html"><span>Coming Soon</span></a>
-											</li>
-										</ul>
+									<li class="menu-item-has-children"><a href="#Blog"><span>Blog</span></a>
 									</li>
+								
 								</ul>
 							</nav>
 							<!--Buttons-->
-							<!--Navbar Search-->
-							<div class="ptf-navbar-search">
-								<div class="ptf-navbar-search__wrapper">
-									<form>
-										<input type="text" placeholder="Type and hit enter to search...">
-									</form>
-								</div><a class="ptf-navbar-search__toggle" href="#"><i class="lnir lnir-search-alt"></i><i class="lnir lnir-close"></i></a>
-							</div>
 							<!--Offcanvas Menu Toggle--><a class="ptf-offcanvas-menu-icon js-offcanvas-menu-toggle" href="#"><i class="lnir lnir-menu-alt-5"></i></a>
+							<!--Logo--><a class="ptf-navbar-logo" href="index.html"><img class="black" src="assets/img/root/logo-center-dark.png" alt="" loading="lazy"><img class="white" src="assets/img/root/logo-center-white.png" alt="" loading="lazy"></a>
+							<!--Socials-->
+							<div class="ptf-navbar-socials">
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 twitter" href="#" target="_blank"><i class="socicon-twitter"></i></a>
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 facebook" href="#" target="_blank"><i class="socicon-facebook"></i></a>
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 instagram" href="#" target="_blank"><i class="socicon-instagram"></i></a>
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 dribbble" href="#" target="_blank"><i class="socicon-dribbble"></i></a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -150,88 +80,19 @@
 						<!--Menu-->
 						<ul class="sf-menu">
 							<li class="menu-item-has-children two-columns"><a href="index.html"><span>Home</span></a>
-								<ul class="sub-menu">
-									<li><a href="index.html"><span>Home Default</span></a>
-									</li>
-									<li><a href="home-studio.html"><span>Home Studio</span></a>
-									</li>
-									<li><a href="home-agency.html"><span>Home Agency</span></a>
-									</li>
-									<li><a href="home-minimal.html"><span>Home Minimal</span></a>
-									</li>
-									<li><a href="home-dark.html"><span>Home Dark</span></a>
-									</li>
-									<li><a href="home-parallax.html"><span>Home Parallax</span></a>
-									</li>
-									<li><a href="home-freelancer.html"><span>Home Freelancer</span></a>
-									</li>
-									<li><a href="home-vertical.html"><span>Home Vertical</span></a>
-									</li>
-									<li><a href="home-trending.html"><span>Home Trending</span></a>
-									</li>
-									<li><a href="home-modern.html"><span>Home Modern</span></a>
-									</li>
-								</ul>
 							</li>
-							<li class="menu-item-has-children"><a href="#"><span>Portfolio</span></a>
-								<ul class="sub-menu">
-									<li><a href="portfolio-grid.html"><span>Works Grid</span></a>
-									</li>
-									<li><a href="portfolio-masonry.html"><span>Works Masonry</span></a>
-									</li>
-									<li><a href="portfolio-listing.html"><span>Works Listing</span></a>
-									</li>
-									<li><a href="portfolio-carousel.html"><span>Works Carousel</span></a>
-									</li>
-									<li><a href="portfolio-showcase-1.html"><span>Work Showcase 1</span></a>
-									</li>
-									<li><a href="portfolio-showcase-2.html"><span>Work Showcase 2</span></a>
-									</li>
-								</ul>
+							<li class="menu-item-has-children"><a href="#portfolio"><span>Portfolio</span></a>
 							</li>
-							<li class="menu-item-has-children"><a href="#"><span>Blog</span></a>
-								<ul class="sub-menu">
-									<li><a href="blog-grid.html"><span>Blog Grid</span></a>
-									</li>
-									<li><a href="blog-masonry.html"><span>Blog Masonry</span></a>
-									</li>
-									<li><a href="blog-sidebar.html"><span>Blog Sidebar</span></a>
-									</li>
-									<li><a href="single-post.html"><span>Single Post</span></a>
-									</li>
-									<li><a href="single-post-sidebar.html"><span>Single Post Sidebar</span></a>
-									</li>
-								</ul>
+							<li class="menu-item-has-children two-columns"><a href="#Testimonial"><span>Testimonial</span></a>
 							</li>
-							<li class="menu-item-has-children two-columns"><a href="#"><span>Pages</span></a>
-								<ul class="sub-menu">
-									<li><a href="about-us.html"><span>About Us</span></a>
-									</li>
-									<li><a href="about-me.html"><span>About Me</span></a>
-									</li>
-									<li><a href="services.html"><span>Services</span></a>
-									</li>
-									<li><a href="service-detail.html"><span>Service Detail</span></a>
-									</li>
-									<li><a href="pricing.html"><span>Pricing</span></a>
-									</li>
-									<li><a href="team.html"><span>Team</span></a>
-									</li>
-									<li><a href="faq.html"><span>FAQ</span></a>
-									</li>
-									<li class=" current-menu-item"><a href="contact.html"><span>Contact</span></a>
-									</li>
-									<li><a href="404.html"><span>Page 404</span></a>
-									</li>
-									<li><a href="coming-soon.html"><span>Coming Soon</span></a>
-									</li>
-								</ul>
+							<li class="menu-item-has-children"><a href="#Blog"><span>Blog</span></a>
 							</li>
+						
 						</ul>
 					</nav>
 				</div>
 				<div class="ptf-offcanvas-menu__footer">
-					<p class="ptf-offcanvas-menu__copyright">© 2021 <span>Moonex</span>. All Rights Reserved. <br>Development by <span>Paul Studio</span>.</p>
+					<p class="ptf-offcanvas-menu__copyright">© 2022 <span>AdaGlory</span>. All Rights Reserved. <br>Development by <span>Ada Design</span>.</p>
 					<div class="ptf-offcanvas-menu__socials">
 						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 twitter" href="#" target="_blank"><i class="socicon-twitter"></i></a>
 						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 facebook" href="#" target="_blank"><i class="socicon-facebook"></i></a>
