--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 							<!--Logo--><a class="ptf-navbar-logo" href="index.html"><img class="black" src="assets/img/root/logo-center-dark.png" alt="" loading="lazy"><img class="white" src="assets/img/root/logo-center-white.png" alt="" loading="lazy"></a>
 							<!--Socials-->
 							<div class="ptf-navbar-socials">
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 twitter" href="#" target="_blank"><i class="socicon-twitter"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 facebook" href="#" target="_blank"><i class="socicon-facebook"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 instagram" href="#" target="_blank"><i class="socicon-instagram"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 dribbble" href="#" target="_blank"><i class="socicon-dribbble"></i></a>
+									<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 twitter" href="https://twitter.com/AOgbonna?s=09" target="_blank"><i class="socicon-twitter"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 facebook" href="https://www.facebook.com/adex.gloria/" target="_blank"><i class="socicon-facebook"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 linkedin" href="https://www.linkedin.com/in/ada-glory/" target="_blank"><i class="socicon-linkedin"></i></a>
+									
+								
 							</div>
 						</div>
 					</div>
@@ -94,9 +95,9 @@
 				<div class="ptf-offcanvas-menu__footer">
 					<p class="ptf-offcanvas-menu__copyright">© 2022 <span>AdaGlory</span>. All Rights Reserved. <br>Development by <span>Ada Design</span>.</p>
 					<div class="ptf-offcanvas-menu__socials">
-						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 twitter" href="#" target="_blank"><i class="socicon-twitter"></i></a>
-						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 facebook" href="#" target="_blank"><i class="socicon-facebook"></i></a>
-						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 instagram" href="#" target="_blank"><i class="socicon-instagram"></i></a>
+						<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 twitter" href="https://twitter.com/AOgbonna?s=09" target="_blank"><i class="socicon-twitter"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 facebook" href="https://www.facebook.com/adex.gloria/" target="_blank"><i class="socicon-facebook"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 linkedin" href="https://www.linkedin.com/in/ada-glory/" target="_blank"><i class="socicon-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -651,11 +652,10 @@
 						</div>
 						<div class="col-12 col-lg d-flex justify-content-center justify-content-lg-end">
 							<div class="ptf-footer-socials has-black-color">
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 twitter" href="#" target="_blank"><i class="socicon-twitter"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 facebook" href="#" target="_blank"><i class="socicon-facebook"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 instagram" href="#" target="_blank"><i class="socicon-instagram"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 pinterest" href="#" target="_blank"><i class="socicon-pinterest"></i></a>
-								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-1 dribbble" href="#" target="_blank"><i class="socicon-dribbble"></i></a>
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 twitter" href="https://twitter.com/AOgbonna?s=09" target="_blank"><i class="socicon-twitter"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 facebook" href="https://www.facebook.com/adex.gloria/" target="_blank"><i class="socicon-facebook"></i></a>
+										<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 linkedin" href="https://www.linkedin.com/in/ada-glory/" target="_blank"><i class="socicon-linkedin"></i></a>
+								<!--Social Icon--><a class="ptf-social-icon ptf-social-icon--style-3 dribbble" href="https://dribbble.com/adaglory" target="_blank"><i class="socicon-dribbble"></i></a>
 							</div>
 						</div>
 					</div>
