--- a/index.html
+++ b/index.html
@@ -470,12 +470,12 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Niddify-Hero.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="niddify.html"></a><img src="assets/img/portfolio/Niddify-Hero.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UI/UX
 														</div>
-														<h4 class="ptf-work__title"><a href="#">Niddify</a>
+														<h4 class="ptf-work__title"><a href="niddify.html">Niddify</a>
 														</h4>
 													</div>
 												</article>
@@ -485,17 +485,18 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Adspot.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/renmo-management.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UX Design
 														</div>
-														<h4 class="ptf-work__title"><a href="#">Adspot</a>
+														<h4 class="ptf-work__title"><a href="#">RenmoHomes</a>
 														</h4>
 													</div>
 												</article>
 											</div>
 										</div>
+										
 										<div class="swiper-slide">
 											<div>
 												<!--Portfolio Item-->
@@ -515,7 +516,22 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Hyves.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Adspot-img.png" alt="" loading="lazy">
+													</div>
+													<div class="ptf-work__meta">
+														<div class="ptf-work__category">UX Design
+														</div>
+														<h4 class="ptf-work__title"><a href="#">Adspot</a>
+														</h4>
+													</div>
+												</article>
+											</div>
+										</div>
+										<div class="swiper-slide">
+											<div>
+												<!--Portfolio Item-->
+												<article class="ptf-work ptf-work--style-3">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="coming-soon.html"></a><img src="assets/img/portfolio/Hyves.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UI Design
