--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 													</p>
 												</li>
 												<li class="ptf-timeline__item">
-													<h4 class="ptf-timeline__title">Web Designer
+													<h4 class="ptf-timeline__title">UX/UI Designer/Developer
 													</h4>
 													<p class="ptf-timeline__description">Softquest System
 													</p>
@@ -485,12 +485,12 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/renmo-management.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="renmo.html"></a><img src="assets/img/portfolio/renmo-management.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UX Design
 														</div>
-														<h4 class="ptf-work__title"><a href="#">RenmoHomes</a>
+														<h4 class="ptf-work__title"><a href="renmo.html">RenmoHomes</a>
 														</h4>
 													</div>
 												</article>
