--- a/niddify.html
+++ b/niddify.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Moonex - Work Showcase 1</title>
+	<title>Niddify- Work Showcase</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
-	<link rel="icon" type="image/png" href="assets/img/root/favicon.png">
+	<link rel="icon" type="image/png" href="assets/img/root/Favicon-logo.jpg">
 	<!--Framework-->
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-grid.min.css">
@@ -169,7 +169,7 @@
 							<!--Animated Block-->
 							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
 								<!--Simple Image-->
-								<div class="ptf-simple-image"><a href="assets/img/portfolio/single-work/content-image-1.png" data-fancybox rel="nofollow"><img src="assets/img/portfolio/Niddify-Hero.png" alt="" loading="lazy"></a>
+								<div class="ptf-simple-image"><a href="assets/img/portfolio/Niddify-Hero.png" data-fancybox rel="nofollow"><img src="assets/img/portfolio/Niddify-Hero.png" alt="" loading="lazy"></a>
 								</div>
 							</div>
 						</div>
@@ -234,16 +234,16 @@
 								<!--Gallery-->
 								<div class="ptf-justified-gallery " data-row-height="500" data-margins="30">
 									<div class="ptf-gallery__item">
-										<div class="ptf-simple-image"><a href="assets/img/portfolio/single-work/content-image-2.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Quantitative Research-niddify.png" alt="" loading="lazy"></a></div>
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Quantitative Research-niddify.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Quantitative Research-niddify.png" alt="" loading="lazy"></a></div>
 									</div>
 									<div class="ptf-gallery__item">
-										<div class="ptf-simple-image"><a href="assets/img/portfolio/single-work/content-image-3.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Sketches-niddify.png" alt="" loading="lazy"></a></div>
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Sketches-niddify.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Sketches-niddify.png" alt="" loading="lazy"></a></div>
 									</div>
 									<div class="ptf-gallery__item">
-										<div class="ptf-simple-image"><a href="assets/img/portfolio/single-work/content-image-4.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Screens-niddify.png" alt="" loading="lazy"></a></div>
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Screens-niddify.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Screens-niddify.png" alt="" loading="lazy"></a></div>
 									</div>
 									<div class="ptf-gallery__item">
-										<div class="ptf-simple-image"><a href="assets/img/portfolio/single-work/content-image-4.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Screens-niddify2.png" alt="" loading="lazy"></a></div>
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Screens-niddify2.png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Screens-niddify2.png" alt="" loading="lazy"></a></div>
 									</div>
 								</div>
 							</div>
