--- a/renmo.html
+++ b/renmo.html
@@ -3,12 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Moonex - Work Showcase 1</title>
+	<title>Renmo- Work Showcase</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--Favicon-->
-	<link rel="icon" type="image/png" href="assets/img/root/favicon.png">
+	<link rel="icon" type="image/png" href="assets/img/root/Favicon-logo.jpg">
 	<!--Framework-->
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="assets/css/framework/bootstrap-grid.min.css">
@@ -102,7 +102,160 @@
 				</div>
 			</div>
 			<!--Main-->
-			<h1>Coming Soon</h1>
+			<main class="ptf-main">
+				<article class="ptf-page ptf-page--single-work-1">
+					<section>
+						<!--Spacer-->
+						<div class="ptf-spacer" style=" --ptf-xxl: 10rem; --ptf-md: 5rem;"></div>
+						<div class="container-xxl">
+							<div class="row">
+								<div class="col-xl-6">
+									<!--Animated Block-->
+									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+										<h1 class="large-heading">RenmoHomes <br>Management System</h1>
+										<!--Spacer-->
+										<div class="ptf-spacer" style=" --ptf-xxl: 5rem; --ptf-md: 2.5rem;"></div>
+										</div>
+									<!--Spacer-->
+									<div class="ptf-spacer" style=" --ptf-lg: 4.375rem; --ptf-md: 2.1875rem;"></div>
+								</div>
+								<div class="col-xl-3">
+									<!--Spacer-->
+									<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+									<!--Animated Block-->
+									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="100">
+										<h5 class="fz-14 text-uppercase has-3-color fw-normal">Client</h5>
+										<!--Spacer-->
+										<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+										<p class="fz-20 lh-1p5 has-black-color">RenmoInc, <br>Accra, Ghana</p>
+									</div>
+									<!--Spacer-->
+									<div class="ptf-spacer" style=" --ptf-xxl: 4.375rem; --ptf-md: 2.1875rem;"></div>
+									<!--Animated Block-->
+									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="200">
+										<h5 class="fz-14 text-uppercase has-3-color fw-normal">Services</h5>
+										<!--Spacer-->
+										<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+										<p class="fz-20 lh-1p5 has-black-color">UX Research <br>Wireframing <br>High Fidelity Mockup</p>
+									</div>
+								</div>
+								<div class="col-xl-3">
+									<!--Spacer-->
+									<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+									<!--Animated Block-->
+									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="300">
+										<h5 class="fz-14 text-uppercase has-3-color fw-normal">Team</h5>
+										<!--Spacer-->
+										<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+										<p class="fz-20 lh-1p5 has-black-color">Ada Glory - UI/UX Designer <br>Glibert-Blankson - Project Manager / BackEnd Developer <br> Oliver Otechere - FrontEnd Developer</p>
+									</div>
+									<!--Spacer-->
+									<div class="ptf-spacer" style=" --ptf-xxl: 4.375rem; --ptf-md: 2.1875rem;"></div>
+									<!--Animated Block-->
+									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="400">
+										<h5 class="fz-14 text-uppercase has-3-color fw-normal">Date</h5>
+										<!--Spacer-->
+										<div class="ptf-spacer" style=" --ptf-xxl: 1.25rem;"></div>
+										<p class="fz-20 lh-1p5 has-black-color">May, 2022</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--Spacer-->
+						<div class="ptf-spacer" style=" --ptf-xxl: 6.25rem; --ptf-md: 3.125rem;"></div>
+					</section>
+					<section>
+						<div class="container-xxl">
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<!--Simple Image-->
+								<div class="ptf-simple-image"><a href="assets/img/portfolio/Dribbble_Shot-Renmo.png" data-fancybox rel="nofollow"><img src="assets/img/portfolio/Dribbble_Shot-Renmo.png" alt="" loading="lazy"></a>
+								</div>
+							</div>
+						</div>
+					</section>
+					<section>
+						<!--Spacer-->
+						<div class="ptf-spacer" style=" --ptf-xxl: 10rem; --ptf-md: 3.125rem;"></div>
+						<div class="container">
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<p class="fz-30 has-black-color"> "RenmoHomes” is a financial home company whose aim is to help tenants living in Ghana pay rent monthly, It’s operation was run using airtable for it’s applications then operations team had sort data and information from excel. Renmo Management system brought about the automation of RenmoHomes operations for both the tenants and the staff of RenmoHomes</p>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 4.375rem; --ptf-md: 2.1875rem;"></div>
+							<!--Divider-->
+							<div class="ptf-divider" style="--ptf-height: 1px; --ptf-color: var(--ptf-color-14);"></div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 6.25rem; --ptf-md: 3.125rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<h2>Challenge</h2>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 1.5625rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<p class="fz-18"> "Rent, one of the main expenses to survive as a human being anywhere in the world when you don’t own a home but in africa it’s a little different more especially West Africa you pay rent Yearly." and sometimes you might meet landlords who request bi-annual rent from you, this can be very daunting having experienced this myself while living in Accra, Ghana and Lagos, Nigeria. Why pay rent yearly when you can pay it monthly? This is where RenmoHomes come in, it is on a mission to help tenants in accra and west africa at large pay rent monthly with a percentage fee by following a three step process 
+									Allowing users(Target users that fit into a criteria) fill out an application form in order to know what their situation is like.
+									Document Verification - this is done after users have submitted all necessary documents for verification
+									Landlord Verification - Since RenmoHomes is financing the home our users is trying to rent we need to verify that the lanlord details submitted by the renants is real then payments is made and the user can move in and pay rent monthly</p>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 1.5625rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<ul class="fz-18" style="line-height: 2;">
+									<li>Hasten up processing time for renants to run through their application process</li>
+									<li>Create a better user exprience for renants where they feel involved in their process</li>
+									<li>Create a digital platform in order to automate the process of helping renants pay rent monthly</li>
+									<li>Find a better way for payments to be made involving the application</li>
+									<li>Find a way to assign tasks via their own platform</li>
+								</ul>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 4.375rem; --ptf-md: 2.1875rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+							
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 6.25rem; --ptf-md: 3.125rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<h2>Solution</h2>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 1.5625rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<p class="fz-18"> The design approach towaards this project was to first understand what the existing system was and the lapses in the existing system and this was done by conducting user interview with different particpants from the clients to the operations team who were involved in the everyday process of renmo, the insights derived from these interviews and research lead to the solutions </p>
+							</div>
+							<!--Spacer-->
+							<div class="ptf-spacer" style=" --ptf-xxl: 5.625rem; --ptf-md: 2.8125rem;"></div>
+							<!--Animated Block-->
+							<div class="ptf-animated-block" data-aos="fade" data-aos-delay="0">
+								<!--Gallery-->
+								<div class="ptf-justified-gallery " data-row-height="500" data-margins="30">
+									<div class="ptf-gallery__item">
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Admin-Dashboard(Renmo).png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Admin-Dashboard(Renmo).png" alt="" loading="lazy"></a></div>
+									</div>
+									<div class="ptf-gallery__item">
+										<div class="ptf-simple-image"><a href="assets/img/portfolio/Client-(WebApp).png" data-fancybox="869" rel="nofollow"><img src="assets/img/portfolio/Client-(WebApp).png" alt="" loading="lazy"></a></div>
+									</div>
+									
+								</div>
+							</div>
+						</div>
+					</section>
+					<section>
+						<!--Post Navigation-->
+						<div class="ptf-post-navigation ptf-post-navigation--style-2">
+							<div class="container"><span>Next Project</span><a class="h1 large-heading ptf-filled-link" href="#">Lucent</a></div>
+						</div>
+					</section>
+				</article>
+			</main>
 		</div>
 		<!--Footer-->
 		<footer class="ptf-footer ptf-footer--style-6">
