--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Moonex - Coming Soon</title>
+	<title>Ada-Glory - Coming Soon</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -149,23 +149,12 @@
 									<!--Spacer-->
 									<div class="ptf-spacer" style=" --ptf-xxl: 5rem; --ptf-md: 3.75rem;"></div>
 									<!--Animated Block-->
-									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="200">
-										<p class="fz-24 has-black-color">Get notify when website launch. <br>Don’t worry! we not spam.</p>
-										<!--Spacer-->
-										<div class="ptf-spacer" style=" --ptf-xxl: 3.125rem; --ptf-md: 1.5625rem;"></div>
-										<!--Spacer-->
-										<form class="ptf-subscribe-form ptf-subscribe-form--default" style="max-width: 36.25rem;">
-											<div class="ptf-form-group"><i class="lnil lnil-envelope-alt"></i>
-												<input type="email" placeholder="Email Address">
-												<button>Subscribe</button>
-											</div>
-										</form>
-									</div>
+								
 								</div>
 								<div class="col-xl-5 d-none d-xl-block">
 									<!--Animated Block-->
 									<div class="ptf-animated-block" data-aos="fade" data-aos-delay="300">
-										<div class="text-center"><img src="assets/img/root/coming-soon-logo.png" alt="" style="width: 33.125rem" loading="lazy"></div>
+										<div class="text-center"><img src="assets/img/root/balsamiq.png" alt="" style="width: 33.125rem" loading="lazy"></div>
 									</div>
 									<!--Spacer-->
 									<div class="ptf-spacer" style=" --ptf-xl: 5.625rem; --ptf-md: 2.8125rem;"></div>
