--- a/index.html
+++ b/index.html
@@ -501,12 +501,12 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="https://www.datawareghana.com/"></a><img src="assets/img/portfolio/Lucent.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="https://www.datawareghana.com/" target="_blank"></a><img src="assets/img/portfolio/Lucent.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UX Design
 														</div>
-														<h4 class="ptf-work__title"><a href="https://www.datawareghana.com/">Lucent</a>
+														<h4 class="ptf-work__title"><a href="https://www.datawareghana.com/" target="_blank">Lucent</a>
 														</h4>
 													</div>
 												</article>
@@ -516,12 +516,12 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Adspot.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="coming-soon.html"></a><img src="assets/img/portfolio/Adspot.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UX Design
 														</div>
-														<h4 class="ptf-work__title"><a href="#">Adspot</a>
+														<h4 class="ptf-work__title"><a href="coming-soon.html">Adspot</a>
 														</h4>
 													</div>
 												</article>
@@ -531,12 +531,12 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/Hyves.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="coming-soon.html"></a><img src="assets/img/portfolio/Hyves.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UX Design
 														</div>
-														<h4 class="ptf-work__title"><a href="#">HyveTunes</a>
+														<h4 class="ptf-work__title"><a href="coming-soon.html">HyveTunes</a>
 														</h4>
 													</div>
 												</article>
@@ -546,7 +546,7 @@
 											<div>
 												<!--Portfolio Item-->
 												<article class="ptf-work ptf-work--style-3">
-													<div class="ptf-work__media"><a class="ptf-work__link" href="#"></a><img src="assets/img/portfolio/family-line.png" alt="" loading="lazy">
+													<div class="ptf-work__media"><a class="ptf-work__link" href="coming-soon.html"></a><img src="assets/img/portfolio/family-line.png" alt="" loading="lazy">
 													</div>
 													<div class="ptf-work__meta">
 														<div class="ptf-work__category">UI Design
