chnages to index page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										<h5 class="fz-14 text-uppercase has-3-color fw-normal">Biography</h5>
 										<!--Spacer-->
 										<div class="ptf-spacer" style=" --ptf-xxl: 2.8125rem;"></div>
-										<p class="fz-24 has-black-color has-secondary-font" style="max-width: 15.3125rem;">Hi, I'm Ada a UX designer with skills in Web Design, I am a firm believer in user-centered and accessible design. Because design is a way of life, everything I do is always and will always be centered around the user of a product</p>
+										<p class="fz-24 has-black-color has-secondary-font" style="max-width: 15.3125rem;">Hi, I'm Ada a UX designer with skills in Web Design, I am a firm believer in user-centered and accessible design. Because design is a way of life,</p>
 									</div>
 									<!--Spacer-->
 									<div class="ptf-spacer" style=" --ptf-xxl: 5.625rem; --ptf-md: 2.8125rem;"></div>
@@ -170,7 +170,7 @@
 										<div class="ptf-spacer" style=" --ptf-xxl: 2.8125rem;"></div>
 										<!--Counter Up-->
 										<div class="ptf-counter-up ptf-counter-up--style-2" style="--ptf-value-font-family: var(--ptf-secondary-font); --ptf-value-font-weight: normal;">
-											<div class="ptf-counter-up__value" data-prefix="+" data-suffix="">2
+											<div class="ptf-counter-up__value" data-prefix="+" data-suffix="">3
 											</div>
 										</div>
 									</div>
@@ -382,11 +382,17 @@
 												<li class="ptf-timeline__item">
 													<h4 class="ptf-timeline__title">UX Designer
 													</h4>
-													<p class="ptf-timeline__description">DatawareGhana
+													<p class="ptf-timeline__description">RenmoHomes
 													</p>
 												</li>
 												<li class="ptf-timeline__item">
-													<h4 class="ptf-timeline__title">UX Engineer
+													<h4 class="ptf-timeline__title">UX Designer
+													</h4>
+													<p class="ptf-timeline__description">Dataware
+													</p>
+												</li>
+												<li class="ptf-timeline__item">
+													<h4 class="ptf-timeline__title">UX Developer
 													</h4>
 													<p class="ptf-timeline__description">Coeur Consulting
 													</p>
