--- a/coming-soon.html
+++ b/coming-soon.html
@@ -2,6 +2,15 @@
 <html class="no-js ptf-is--coming-soon ptf-is--header-empty ptf-is--footer-style-1 ptf-is--custom-cursor" lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5QVY3935MY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5QVY3935MY');
+</script>
 	<meta charset="utf-8">
 	<title>Ada-Glory - Coming Soon</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
