--- a/404.html
+++ b/404.html
@@ -2,6 +2,15 @@
 <html class="no-js ptf-is--page-404 ptf-is--header-style-1 ptf-is--footer-style-1 ptf-is--footer-style-1 ptf-is--custom-cursor ptf-is--footer-fixed" lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5QVY3935MY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5QVY3935MY');
+</script>
 	<meta charset="utf-8">
 	<title>Ada Glory - Page 404</title>
 	<meta name="description" content="Multipurpose HTML5 Template">
