changes to index

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 													</p>
 												</li>
 												<li class="ptf-timeline__item">
-													<h4 class="ptf-timeline__title">UX/UI Designer/Developer
+													<h4 class="ptf-timeline__title">UX Developer
 													</h4>
 													<p class="ptf-timeline__description">Softquest System
 													</p>
